# operating-system

./: .config.example  .dockerignore  .editorconfig  .gitignore  .packages.list  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.example  env.example  local.mk  offline-lab.yaml  zensical.toml
br2-external/: Config.in  devices.txt  external.desc  external.mk  users.txt
docs/: KERNEL.md  PHASES.md  TASKS.md  about.md  app-filesystem.md  app-format.md  boot.md  bootconf.md  bootfs-config.md  boxctl.md  build-image.md  builder.md  burn-image.md  components.md  configuration.md  contributing.md  development.md  disco.md  getting-started.md  hardware.md  index.md  offline.md  operating-system.md  packages.md  roadmap.md  schemas.md  styleguide.md  terminology.md
recipes/: 00-debian-bootstrap.yaml  01-configure-apt.yaml  02-install-packages.yaml  03-configure-initramfs.yaml  04-install-firmware.yaml  05-configure-system.yaml  06-configure-users.yaml  07-configure-hostname.yaml  08-configure-timezone.yaml  09-configure-network.yaml  10-configure-bluetooth.yaml  11-configure-keyboard.yaml  12-configure-services.yaml  12-configure-utils.yaml  13-update-issue.yaml  14-cleanup.yaml  96-update-issue.yaml  97-cleanup.yaml  (+3 more)
tests/: README.md  conftest.py  pyproject.toml
tests/boards/: qemu-arm64.yaml
tests/tests/: test_base.py  test_boot.py  test_bootconf.py  test_disco.py  test_firewall.py  test_portable.py  test_rauc.py  test_resources.py  test_ssh.py  test_system.py  test_testing.py  test_usb_gadget.py  test_wifi.py  test_zram.py
(+346 files in other folders)
