[project]
name = "br2-builder-infra-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-testinfra>=10.0",
    "pytest-html>=4.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = []
